--- a/css/styles.css
+++ b/css/styles.css
@@ -235,12 +235,15 @@ sup {
   top: -0.5em;
 }
 
+
 a {
-  color: #e6a756;
-  text-decoration: underline;
+  color: #007bff;
+  text-decoration: none;
+  background-color: transparent;
 }
 a:hover {
-  color: #b88645;
+  color: #0263ca;
+  text-decoration: underline;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
